<resources>
    <string name="app_name">TeamCom</string>

    <!--activity_login_reg-->
    <string name="btnLogin">Login With Email</string>
    <string name="btnRegister">Register With Email</string>
    <string name="btnReset">Reset Password</string>
    <string name="btnCheck">Check Authentication</string>
    <string name="btnShowReg">Create An Account</string>
    <string name="btnShowLogin">Login To Your Account</string>
    <string name="hintLgnEmail">Email</string>
...

    <string name="account">Done for today?</string>
    <string name="menu_logout">Logout</string>


    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--fragment_settings-->
    <string name="txtRoles">Roles</string>
    <string name="txtMembers">Members</string>
    <string name="txtInvites">Invites</string>
    <string name="txtDetails">Channel Details</string>
    <string name="txtQueRem">Survey Settings</string>
    <string name="txtTaskStages">Task Stages</string>

    <!--fragment roles-->
    <string name="btnAddNewRole">Add New</string>
    <string name="btnAddNewConvo">Start New Chat</string>

    <!--fragment invites-->
    <string name="btnAddNewInv">Create Invite</string>
    <string name="hint_hoursActive">Expires In (Hrs)</string>
    <string name="hint_uses">Uses</string>

    <!--fragment invites-->

    <!--title Stuff-->
    <string name="title_settings">Channel Settings</string>
    <string name="title_survey">Survey Settings</string>
...
